src/objects/URL_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Community_URL__c</fullName>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Internal_URL__c</fullName>
        <label>Internal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <label>URL Setting</label>
</CustomObject>